Prometheus/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingress-route
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`REPLACE_ME_HOST`)
      kind: Rule
      services:
        - name: prometheus-service
          port: 9090
